--- a/css/pages/projectdetail.module.css
+++ b/css/pages/projectdetail.module.css
@@ -93,7 +93,7 @@
 
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
+  justify-content: flex-start;
   flex-wrap: wrap;
   padding: 0px;
   /* gap: 50px; */
