--- a/css/components/MDXComponents.module.css
+++ b/css/components/MDXComponents.module.css
@@ -6,6 +6,8 @@
   line-height: 34px;
   text-align: center;
   color: #000000;
+
+  margin-bottom: 10px;
 }
 
 .h2 {
@@ -33,6 +35,7 @@
   font-weight: 400;
   font-size: 16px;
   line-height: 24px;
+  font-family: 'Inter';
 
   /* word-break: break-all; */
   word-break: keep-all;
@@ -45,7 +48,9 @@
   min-width: 100%;
 }
 
-@media only screen and (min-width: 768px) {
+.hr {
+  width: 100%;
+  border: 1px solid #e6e6e6;
 }
 
 @media only screen and (min-width: 1200px) {
@@ -64,5 +69,12 @@
 
     /* word-break: break-all; */
     word-break: keep-all;
+  }
+
+  .wrapper {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    align-items: flex-start;
   }
 }
