--- a/css/pages/projects.module.css
+++ b/css/pages/projects.module.css
@@ -5,7 +5,7 @@
   justify-content: flex-start;
   align-items: center;
   margin: auto;
-  padding-top: 30px;
+  padding-top: 20px;
   gap: 30px;
 }
 .project_list {
@@ -20,6 +20,7 @@
 @media screen and (min-width: 1200px) {
   .container {
     width: 1170px;
+    align-items: flex-start;
   }
   .project_list {
     flex-direction: row;
