--- a/css/components/ImageCarousel.module.css
+++ b/css/components/ImageCarousel.module.css
@@ -1,15 +1,19 @@
 .image_carousel {
-  width: 100%;
-  height: calc(50vw);
+  width: 100vw;
+  height: 25vw;
+
   margin: auto;
   position: relative;
 }
 
 .image_wrapper {
-  position: relative;
-  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 53.48%;
   height: 100%;
 }
+
 .visible {
   visibility: visible;
   opacity: 1;
@@ -22,77 +26,48 @@
   transition: visibility 0s 0.3s, opacity 0.3s linear;
 }
 
-@media screen and (min-width: 1200px) {
+/* @media screen and (min-width: 1200px) {
   .image_carousel {
     width: 1170px;
     height: 585px;
   }
+} */
+
+.right_mask {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 50%;
+  height: 100%;
+  overflow: hidden;
+
+  color: var(--primary-color);
 }
 
-.controller {
-  top: 0;
-  left: 0;
-  position: absolute;
-  width: 100%;
-  height: calc(50vw);
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-}
 @media screen and (min-width: 1200px) {
-  .controller {
-    width: 1170px;
-    height: 585px;
+  .right_mask {
+    visibility: visible;
   }
 }
 
-.icon_wrapper {
+.title {
+  position: absolute;
+  left: 58.2%;
+  right: 4.84%;
+  top: 37.81%;
+  bottom: 37.74%;
+
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 600;
+  font-size: 36px;
+  line-height: 44px;
   display: flex;
-  justify-content: center;
   align-items: center;
 
-  color: #444;
-  opacity: 0.4;
+  /* white */
 
-  border-radius: 30px;
-  width: 30px;
-  height: 30px;
-  background-color: #dadada;
-  margin: 0 5px;
-  padding: 5px;
+  color: #ffffff;
 
-  z-index: 999;
-}
-.icon_wrapper:hover {
-  opacity: 0.9;
-  color: #000;
-  background-color: #fff;
-}
-
-.radios {
-  align-self: flex-end;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  gap: 4px;
-  margin-bottom: 10px;
-  z-index: 999;
-}
-
-.input_radios {
-  cursor: pointer;
-  border-radius: 999px;
-  display: inline-block;
-  width: 12px;
-  height: 12px;
-  background: #bbb;
-  -webkit-transition: all 0.3s;
-  -moz-transition: all 0.3s;
-  transition: all 0.3s;
-}
-
-.checked {
-  background: #333;
+  text-shadow: 0px 2px 2px rgba(0, 0, 0, 0.4);
 }
