--- a/css/pages/index.module.css
+++ b/css/pages/index.module.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 20px;
+  gap: 30px;
 }
 
 .image_carousel_wrapper {
@@ -17,5 +17,68 @@
 @media screen and (min-width: 1200px) {
   .mdx_wrapper {
     width: 1170px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
   }
 }
+
+.overview {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.hci {
+  display: flex;
+  flex-direction: column;
+
+  align-items: center;
+}
+
+.hci_icon {
+  width: 200px;
+  height: 100px;
+}
+
+.concepts {
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+}
+
+.concept {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  width: 350px;
+  gap: 10px;
+}
+
+.concept_icon {
+  width: 150px;
+  height: 150px;
+  color: var(--primary-color);
+}
+
+.list_wrapper {
+  text-align: left;
+  width: 100%;
+  height: 150px;
+}
+
+.list {
+  display: inline-block;
+  font-family: 'Inter';
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 27px;
+  text-align: left;
+  list-style-type: disc;
+  list-style-position: inside;
+  /* margin: 0 auto; */
+}
+/* .list *{
+  display: inline-block;
+} */
