--- a/css/components/Header.module.css
+++ b/css/components/Header.module.css
@@ -1,29 +1,28 @@
+.header_position {
+  width: 100%;
+  height: 75px;
+}
+
 .header_wrapper {
   position: fixed;
   top: 0;
   left: 0;
-  right: 0;
-
+  /* right: 0; */
   background-color: white;
-  /* opacity: .6; */
-  /* color: #fff; */
-  width: 100vw;
+  width: 100%;
   height: 75px;
   z-index: 9999;
-}
 
-.header_position {
-  width: 100vw;
-  height: 75px;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.2);
 }
 
 .header {
   display: flex;
   flex-direction: row;
-  width: calc(100vw - 30px);
+  width: calc(100% - 30px);
   justify-content: space-between;
   align-items: center;
-  height: 75px;
+  height: 100%;
   margin: auto;
 }
 
@@ -71,7 +70,7 @@
   bottom: 0;
 
   height: 100%;
-  width: 100vw;
+  width: 100%;
 
   background-color: rgba(255, 255, 255, 1);
 
