--- a/css/pages/index.module.css
+++ b/css/pages/index.module.css
@@ -49,6 +49,7 @@
   flex-wrap: wrap;
   width: 100%;
   margin: auto;
+  margin-bottom: 40px;
   gap: 15px;
 }
 
@@ -69,7 +70,7 @@
 
 .list_wrapper {
   width: 100%;
-  height: 150px;
+  height: 120px;
 }
 
 .list {
@@ -81,6 +82,11 @@
   list-style-type: disc;
   list-style-position: inside;
   /* margin: 0 auto; */
+}
+.detail_image {
+  position: relative;
+  width: 100%;
+  height: 175px;
 }
 
 @media screen and (min-width: 1200px) {
