--- a/css/components/Alumni.module.css
+++ b/css/components/Alumni.module.css
@@ -1,7 +1,15 @@
 .alumni {
   display: flex;
   flex-direction: row;
-  align-items: center;
+  align-items: flex-start;
+  padding: 0px;
+  gap: 12px;
+}
+.desc {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-items: flex-start;
   padding: 0px;
   gap: 12px;
 }
@@ -22,8 +30,8 @@
   line-height: 21px;
   /* identical to box height */
 
-  display: flex;
-  align-items: center;
+  /* display: flex;
+  align-items: center; */
 
   color: #333333;
 }
@@ -32,8 +40,8 @@
   font-weight: 500;
   font-size: 20px;
   line-height: 24px;
-  display: flex;
-  align-items: center;
+  /* display: flex;
+  align-items: center; */
 
   color: #000000;
 }
