--- a/css/pages/index.module.css
+++ b/css/pages/index.module.css
@@ -71,9 +71,11 @@
 .list_wrapper {
   width: 100%;
   height: 120px;
+  display: flex;
 }
 
 .list {
+  margin: auto;
   display: inline-block;
   font-weight: 400;
   font-size: 18px;
