--- a/src/styles/components/Member.module.css
+++ b/src/styles/components/Member.module.css
@@ -79,7 +79,7 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    padding: 20px 0px;
+    /* padding: 20px 0px; */
     gap: 5px;
 }
 
@@ -99,7 +99,7 @@
     flex-direction: column;
     align-items: flex-start;
     padding: 0px;
-    gap: 10px;
+    gap: 0px;
 }
 
 .ri_elem {
