--- a/src/styles/components/Member.module.css
+++ b/src/styles/components/Member.module.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
     padding: 0px;
     gap: 10px;
     max-width: 570px;
